NEW: Launch JavaFX on the module path